--- a/room.css
+++ b/room.css
@@ -1,3 +1,15 @@
+/*
+
+# Room:			PinguiN.'s Liar
+# Author:		-PinguiN-
+# Made for:		https://plug.dj/sk-cz-trolling
+# Created:		5.7.2016
+
+## WARNING ##
+You are NOT allowed using this file without creator's permission!
+
+*/
+
 /* Header */
 
 .app-header {
