--- a/room.css
+++ b/room.css
@@ -183,7 +183,7 @@ You are NOT allowed using this file without creator's permission!
 	background:rgb(70,123,203) !important;
 }
 
-#dj-button.is-leave .left, #dj-button.is-quit .left {
+#dj-button.is-leave .left, #dj-button.is-quit .left, #dj-button.is-join .left {
 	background:rgb(43,87,154) !important;
 }
 
