--- a/room.css
+++ b/room.css
@@ -386,3 +386,10 @@ You are NOT allowed using this file without creator's permission!
         box-shadow: inset 0 0 10px #d05340;
         border-left:3px solid #d05340 !important;
 }
+
+/* Shoky */
+
+#chat [data-cid^="5756006-"] .bdg {
+    background: url('http://i.imgur.com/UMgkFmN.png') !important;
+    background-position: 0px 0px;
+}
