--- a/room.css
+++ b/room.css
@@ -349,7 +349,7 @@ You are NOT allowed using this file without creator's permission!
     position: relative;
     left: -1px;
     padding-left: 18px;
-    background-image: url('http://i.imgur.com/44AKqI5.gif');
+    background-image: url('http://i.imgur.com/P2MSgUb.png');
     background-repeat: no-repeat;
     background-position: -1px center;
     background-size: 15px auto;
