--- a/room.css
+++ b/room.css
@@ -390,7 +390,7 @@ You are NOT allowed using this file without creator's permission!
 }
 
 #chat [data-cid^="6345878-"] .bdg {
-    background: url('http://i.imgur.com/2VfeAfb.png') !important;
+    background: url('http://i.imgur.com/DhBMSll.png') !important;
     background-position: 0px 0px;
 }
 
