--- a/room.css
+++ b/room.css
@@ -428,3 +428,11 @@ You are NOT allowed using this file without creator's permission!
     background: url('http://i.imgur.com/k2hoWah.png') !important;
     background-position: 0px 0px;
 }
+
+
+/* Kevin */
+
+#chat [data-cid^="4106134-"] .bdg {
+    background: url('http://i.imgur.com/QH6FP7H.png') !important;
+    background-position: 0px 0px;
+}
