--- a/room.css
+++ b/room.css
@@ -425,7 +425,7 @@ You are NOT allowed using this file without creator's permission!
 /* Atti */
 
 #chat [data-cid^="6614885-"] .bdg {
-    background: url('http://i.imgur.com/k2hoWah.png') !important;
+    background: url('http://i.imgur.com/C9K7aaN.gif') !important;
     background-position: 0px 0px;
 }
 
