--- a/room.css
+++ b/room.css
@@ -272,6 +272,15 @@ background:url('https://cdn.plug.dj/_/static/images/icons.38f7ee77fd7ad2bc018b1a
 	background:#000 !important;
 }
 
+#chat .emote {
+	border-left:3px solid green !important;
+	background:#111 !important;
+}
+
+#chat .emote .text {
+	color:green !important;
+}
+
 #user-rollover {
 	background:rgba(0,0,0,0.8) !important;
 }
@@ -643,6 +652,7 @@ background:url('https://cdn.plug.dj/_/static/images/icons.38f7ee77fd7ad2bc018b1a
 	box-shadow: inset 0 0 30px #c59840 !important;
 	background:rgba(0,0,0,0.8) !important
 }
+
 
 .experience .levels .level.earned.ep {
 	background:#000 !important;
