--- a/room.css
+++ b/room.css
@@ -988,7 +988,7 @@ background:url('https://cdn.plug.dj/_/static/images/icons.38f7ee77fd7ad2bc018b1a
 /* Kevin */
 
 #chat [data-cid^="4106134-"] .bdg {
-	background: url('http://i.imgur.com/QH6FP7H.png') !important;
+	background: url('http://i.imgur.com/yUzeDV6.gif') !important;
 	background-position: 0px 0px;
 }
 
