--- a/room_pm.css
+++ b/room_pm.css
@@ -5,639 +5,503 @@
 # Created:		23.8.2016
 ## WARNING ##
 You are NOT allowed using this file without creator's permission!
-
-Light Green
-#0FB8AD
-(15,184,173)
-
-Light Blue
-#2CB5E8
-(44,181,232)
-
-Light Purple
-#905190
-(144,81,144)
-
-Light Red
-#FF6768
-(255,103,104)
-
 */
 
 * {
-font-family: Arial, sans-serif;
+	font-family:Tahoma, sans-serif !important;
 }
+
+.icon{background-image:url('http://i.imgur.com/jRzB362.png')}
 
 /* Plug Menu */
 
 #app-menu {
-background:rgba(44,181,232,0.4);
-border:none;
-}
-
-#app-menu.open {
-border:none;
-box-shadow:1px 0px 20px #333;
+	background:none;
+	border:none;
 }
 
 #app-menu .button {
-background:#2CB5E8;
-height:54px;
-transition:0.3s;
-}
-
-#app-menu .button:hover {
-box-shadow:0px 0px 0px #777, inset 0 0 10px #333 !important;
-}
-
-#app-menu.open .button {
-background:#2CB5E8;
-}
-
-#app-menu.open .button:hover {
-box-shadow:none !important;
-}
-
-#app-menu.in-room .button {
-box-shadow:1px 0px 10px #777;
+	background:#2878BA;
+	box-shadow:0.1px 0 10px #000;
+	height:54px;
+	transition:0.5s;
 }
 
 #app-menu .list {
-background:transparent;
+	background:rgba(0,0,0,0.4);
 }
 
 #app-menu .list .item {
-transition:0.3s;
-box-shadow:none;
+	box-shadow:none;
+	transition:0.5s;
 }
 
 #app-menu .list .item:hover {
-background:rgba(40,120,186,0.4);
+	background:rgba(50,87,125,0.5);
+	box-shadow:inset 3px 0 0 #32577d;
 }
 
 #app-menu .list .logout {
-position:relative; left:0; bottom:0;
-width:100%;
-height:55px;
-border:none;
-text-align:left;
-cursor:pointer;
-transition:0.3s;
+	position:relative; left:0; bottom:0;
+	width:100%;
+	height:55px;
+	border:none;
+	text-align:left;
+	transition:0.5s;
+}
+
+#app-menu .list .logout i {
+	display:none;
 }
 
 #app-menu .list .logout div {
-position:relative;
-top:16px;
-float:left;
-margin-left:15px;
+	position:relative;
+	top:16px;
+	float:left;
+	margin-left:10px;
 }
 
 #app-menu .list .logout:hover {
-border:none;
-background:rgba(40,120,186,0.4);
+	border:none;
+	background:rgba(192,64,67,0.5);
+	box-shadow:inset 3px 0 0 #C04043;
 }
 
 #app-menu .list .rcsunload {
-border:none !important;
-width:100% !important;
-left:0 !important;
-height:55px !important;
-text-align:left !important;
-transition:0.3s;
-}
 
-#app-menu .list .rcsunload div {
-position:relative !important;
-top:16px !important;
-float:left !important;
-margin-left:20px !important;
-}
-
-#app-menu .list .rcsunload:hover {
-border:none !important;
-background:rgba(40,120,186,0.4) !important;
 }
 
 /* Header */
 
 .app-header {
-background:rgba(40,120,186,0.8);
-box-shadow:0px 1px 20px #333, inset 0 0 30px #333;
-}
-
-.dark-label {
-color:#ccc;
+	background:#1C3146;
+	box-shadow:0 1px 10px #000;
 }
 
 .bar-divider {
-background:#fff;
+	background:#fff;
+}
+
+.dark-label {
+	color:#aaa;
 }
 
 #rs-skip-button {
-background:#2CB5E8 !important;
-box-shadow:-1px 0px 10px #777 !important;
-right:54px !important;
-transition:0.3s !important;
+	background:#2878BA !important;
+	box-shadow:-1px 0px 10px #000 !important;
+	right:54px !important;
+	transition:0.5s !important;
 }
 
 #rs-skip-button:hover {
-box-shadow:0px 0px 0px #777, inset 0 0 10px #333 !important;
+	background:#2878BA !important;
+	box-shadow:0 0 0 #000, inset 0 0 8px #000 !important;
 }
 
 #history-button {
-background:#2CB5E8;
-box-shadow:none;
-z-index:2;
-transition:0.3s;
+	background:#2878BA;
+	transition:0.5s;
+	z-index:2;
+	box-shadow:5px 0px 10px -5px #000 !important;
 }
 
 #history-button:hover {
-box-shadow:inset 0 0 10px #333 !important;
+	background:#2878BA;
+	box-shadow:0 0 0 #000, inset 0 0 8px #000 !important;
 }
 
+
 #history-button.selected {
-box-shadow:inset 0 0 30px #333 !important;
-background:rgba(40,120,186,0.8);
-transition:0.3s;
+	background:#2878BA !important;
+	box-shadow:0 0 0 #000, inset 0 0 20px #000 !important;
 }
 
 #header-panel-bar {
-background:#2CB5E8;
-}
-
-.right-meta {
-z-index:0;
-}
-
-#room .app-right {
-background:#222;
+	box-shadow:inset 0px -3px #444;
 }
 
 .header-panel-button {
-border:none;
-transition:0.3s;
+	box-shadow:none;
+	border:none;
+	transition:0.5s;
+	opacity:0.6;
 }
 
-.header-panel-button:hover {
-box-shadow:inset 0 0 10px #333 !important;
+#header-panel-bar .header-panel-button:hover {
+	opacity:1;
+	background:none;
 }
 
 .header-panel-button.selected {
-box-shadow:inset 0 0 30px #333 !important;
-background:rgba(40,120,186,0.8);
-}
-
-#waitlist-button .count {
-color:#ccc;
-}
-
-#users-button.has-guests span.guest-count {
-color:#ccc;
-}
-
-#friends-button .request-count {
-background:#fff;
-box-shadow:inset 0px 0px 10px #888;
-border-radius:16px;
-padding:4px 4px;
-color:#2CB5E8;
+	box-shadow:inset 0px -3px #2878BA, inset 0 0 20px #000;
+	opacity:1;
+	background:none;
 }
 
 /* Chat */
 
 #chat-header {
-background:#2CB5E8;
-border:none !important;
-height:47px;
+	background:#222;
 }
 
 #chat-header .divider {
-display:none;
+	display:none;
 }
 
-#chat-messages {
-background:rgba(44,181,232,0.2);
-border:none !important;
+#chat-header, #chat-messages {
+	border-bottom:1px solid #222;
 }
 
-#chat .welcome {
-color:#2CB5E8;
-}
-
-#chat .welcome:before {
-content:"";
-background:url('http://i.imgur.com/vbsVSpa.png');
-width:300px; height:80px;
-display:block;
-margin:0 auto;
-z-index:3!important;
+#chat {
+	background:#1C3146;
 }
 
 #chat .cm:nth-child(2n+1) {
-background:rgba(15,184,173,0.1);
+	background:#192c3f;
 }
 
-#chat .mention.role-none {
-box-shadow:inset 0px 0px 10px #fff !important;
-background:rgba(15,184,173,0.1) !important;
-}
-
-#chat .mention.role-host, #chat .mention.role-cohost, #chat .mention.role-manager, #chat .mention.role-bouncer, #chat .mention.role-dj {
-box-shadow:inset 0px 0px 10px #2CB5E8 !important;
-background:transparent !important;
-}
-
-#chat .mention .msg .text .name {
-color:#2CB5E8;
+#chat .welcome {
+	color:#4aaee7;
 }
 
 #chat-messages .timestamp {
-color:#aaa;
+	color:#aaa;
 }
 
-#chat .delete-button, .rcs-delete {
-transition:0.3s !important;
-padding:5px !important;
-top:0 !important;
-right:0 !important;
-box-shadow:inset 0 0 10px #000 !important;
-width:50px;
-text-align:center;
+#chat .mention {
+	background:none !important;
+	box-shadow:inset 3px 0 0 #4aaee7;
 }
 
-#chat .delete-button:hover, .rcs-delete:hover {
-background:#FF6768 !important;
-box-shadow:inset 0 0 30px #000 !important;
+#chat .mention .name {
+	color:#4aaee7;
 }
 
-#chat .rs-log-orange, #chat .rs-log-user-leave, #chat .rs-log-history {
-border-left: #FF6768 3px solid !important;
-color:#FF6768 !important;
+#chat .moderation, #chat .moderation .from, #chat .moderation .from .un {
+	color:#4aaee7 !important;
 }
 
-#chat .rs-log-green, #chat .rs-log-user-friend-join, #chat .rs-log-user-woot {
-border-left: #a6bd58 3px solid !important;
-color:#a6bd58 !important;
+#chat .role-host .un, #chat .role-cohost .un {
+color:#4aaee7 !important;
 }
 
-#chat .from.dj .un, #chat .from.staff .un {
-color:#2CB5E8;
+#chat .role-manager .un, #chat .role-bouncer .un, #chat .role-dj .un {
+	color:#FFA500 !important;
+}
+
+#chat .delete-button {
+	transition:0.5s;
+	padding:4px;
+}
+
+#chat .delete-button:hover {
+	transition:0.5s;
+	background:#4aaee7;
+}
+
+.radiantimg-delete {
+	transition:0.5s;
+	padding:4px !important;
+	background:#444A59 !important;
+}
+
+.radiantimg-delete:hover {
+	background:#4aaee7 !important;
+}
+
+.rcs-delete {
+	transition:0.5s;
+	padding:4px !important;
+	background:#444A59 !important;
+	font-weight:500;
+}
+
+.rcs-delete:hover {
+	background:#4aaee7 !important;
 }
 
 #chat-input {
-background:rgba(44,181,232,0.2);
-transition:0.3s;
+	background:rgba(44,181,232,0.2);
+	transition:0.3s;
 }
 
 #chat-input.focused {
-box-shadow:inset 0 0 10px #333 !important;
+	box-shadow:inset 0 0 10px #000 !important;
+	border:none;
 }
 
-/* User List */
+/* User Lists */
+
+#user-lists, #waitlist {
+	background:#1C3146;
+}
 
 #user-lists .header, #waitlist .header {
-background:#2CB5E8;
-border:none !important;
-height:47px;
-}
-
-#user-lists .header .divider {
-display:none;
+	background:#222;
 }
 
 #user-lists .header .button {
-border:none !important;
-transition:0.3s;
-height:47px;
-top:0 !important;
+	transition:0.5s;
+	border-radius:20px;
 }
 
-#user-lists .header .button .icon {
-top:10px !important;
+#user-lists .header .button.room.selected {
+	border:none;
+	box-shadow:inset 0 0 30px #4aaee7;
 }
 
-#user-lists .header .button.room.selected {box-shadow:inset 0px -5px 30px #fff;}
-#user-lists .header .button.staff.selected {box-shadow:inset 0px -5px 30px #fff;}
-#user-lists .header .button.bans.selected {box-shadow:inset 0px -5px 30px #FF6768;}
-#user-lists .header .button.mutes.selected {box-shadow:inset 0px -5px 30px #FF6768;}
-#user-lists .header .button.ignored.selected {box-shadow:inset 0px -5px 30px #FF6768;}
-
-#user-lists .list-header .input-background {
-background:rgba(44,181,232,0.2);
-box-shadow:none;
-transition:0.3s;
+#user-lists .header .button.staff.selected {
+	border:none;
+	box-shadow:inset 0 0 30px #FFA500;
 }
 
-#user-lists .list-header .input-background.focused {
-box-shadow:inset 0 0 10px #333 !important;
-}
-
-#user-lists .list-header, #user-lists .list {
-background:rgba(44,181,232,0.2);
+#user-lists .header .button.bans.selected,
+#user-lists .header .button.mutes.selected,
+#user-lists .header .button.ignored.selected {
+	border:none;
+	box-shadow:inset 0 0 30px #C04043;
 }
 
 #user-lists .list .user {
-transition:0.3s;
-height:38px;
-}
-
-#user-lists .list .user.is-staff:hover {
-box-shadow:inset 3px 0px 0px #2CB5E8;
-}
-
-#user-lists .list .user.is-subscriber:hover {
-box-shadow:inset 3px 0px 0px #c59840;
-}
-
-#user-lists .list .user.is-subscriber.silver:hover {
-box-shadow:inset 3px 0px 0px #8694b2;
+	transition:0.5s;
 }
 
 #user-lists .list .user:hover {
-box-shadow:inset 3px 0px 0px #fff;
-background:rgba(15,184,173,0.1);
+	background:#324558;
 }
 
-#user-lists .list.room .user i, #user-lists .list.room .user i.icon-chat-dj {
-top:12px;
+#user-lists .list .user.role-host:hover,
+#user-lists .list .user.role-cohost:hover {
+box-shadow:inset 3px 0px 0px #4aaee7 !important;
+	color:#4aaee7 !important;
 }
 
-#user-lists .list.room .user i.icon-chat-subscriber, #user-lists .list.room .user i.icon-chat-silver-subscriber {
-top:12px !important;
+#user-lists .list .user.role-host .name,
+#user-lists .list .user.role-cohost .name {
+	color:#4aaee7 !important;
 }
 
-#user-lists .list.room .user i.icon-woot, #user-lists .list.room .user i.icon-meh, #user-lists .list.room .user i.icon-grab {
-top:5px !important;
+#user-lists .list .user.is-staff:hover {
+	box-shadow:inset 3px 0px 0px #FFA500;
 }
 
-#user-lists .list .user .name{
-top:11px;
-}
-
-.is-dj .name, .is-staff .name {
-color:#2CB5E8;
+#user-lists .list .user.is-staff .name {
+	color:#FFA500;
 }
 
 #user-lists .list.staff .group {
-background:#2CB5E8;
-border:none;
-width:345px;
-}
-
-#user-lists .list.staff .user:hover {
-background:rgba(15,184,173,0.1);
-box-shadow:none;
-}
-
-#user-lists .list.bans .user {
-transition:0.3s;
-}
-
-#user-lists .list.bans .user:hover, #user-lists .list.ignored .user:hover, #user-lists .list.mutes .user:hover  {
-background:rgba(15,184,173,0.1);
-box-shadow:none;
+	background:#192c3f;
+	border:1px solid #4aaee7 !important;
+	width:340px;
 }
 
 #user-lists .list.bans .user .label, #user-lists .list.mutes .user .label {
-color:#2CB5E8;
+	color:#4aaee7;
 }
 
-#user-lists .list.bans .user .timestamp, #user-lists .list.mutes .user .expires, #user-lists .list.bans .user .duration {
-color:#aaa;
-}
-
-#user-lists .list.bans .user .unban, #user-lists .list.mutes .user .unmute {
-color:#2CB5E8;
-}
-
-#user-lists .list.ignored .user .name, #user-lists .list.ignored .user .unignore {
-top:10px;
-}
-
-#user-lists .list.ignored .user:hover {
-box-shadow:none;
+#user-lists .list.bans .user .timestamp, #user-lists .list.mutes .user .expires {
+	color:#aaa;
 }
 
 /* Waitlist */
 
-#waitlist {
-background:rgba(44,181,232,0.2);
-}
-
-#waitlist .header .divider {
-display:none;
-}
-
-#waitlist .header .title, #waitlist .header .position {
-top:15px;
-}
-
-#waitlist .header .count {
-color:#fff;
-}
-
 #waitlist .list .user {
-background:transparent;
+	background:none;
+	transition:0.5s;
 }
 
 #waitlist .list .user:hover {
-background:rgba(15,184,173,0.1);
+	background:#324558;
 }
 
-#waitlist .list.manager .user .meta {
-border:none;
+#waitlist .list .user .is-staff .name {
+	color:#FFA500;
 }
 
-#user-rollover.is-staff .thumb, #waitlist .is-staff .thumb {
-border-color:#2CB5E8 !important;
-}
+	/*
+	Host/Co-Host
+	# Klaudí
+	# Čáro
+	# Kevin
+	*/
+	#waitlist .list [data-uid="3437401"].user .name span {
+		color:#4aaee7 !important;
+	}
+	#waitlist .list [data-uid="11591166"].user .name span {
+		color:#4aaee7 !important;
+	}
+	#waitlist .list [data-uid="4106134"].user .name span {
+		color:#4aaee7 !important;
+	}
 
 /* Friends */
 
 .app-right .friends {
-background:rgba(44,181,232,0.2);
+	background:#1C3146;
 }
 
-.app-right .friends .list-header {
-background:#2CB5E8;
-border:none;
+.app-right .friends.has-requests .header {
+	top:49px !important;
+	box-shadow:inset 0 -3px 0 #444;
+	transition:0.5s;
+	background:#1C3146;
+}
+
+.app-right .friends .header i {
+	background:#4aaee7;
+}
+
+#friends-button.notify .request-count {
+	background:#2878BA;
+	border:16px;
+	padding:4px 4px;
+}
+
+.app-right .friends.has-requests .header:hover {
+	box-shadow:inset 0 -3px 0 #2787BA, inset 0 -10px 20px -5px #2878BA;
 }
 
 .app-right .friends.has-requests .list-header {
-top:0;
+	top:0 !important;
+	background:#222;
 }
 
-.app-right .friends .header {
-top:47px;
-transition:0.3s;
-background:rgba(44,181,232,0.4);
-border-radius:0px 0px 10px 10px;
-}
-
-.app-right .friends .header:hover {
-box-shadow:inset 0px 2px 10px #000;
-}
-
-.app-right .friends .list-header .divider {
-display:none;
-}
-
-.app-right .friends .list-header .input-background {
-background:rgba(137,190,108,0.2);
-transition:0.3s;
-box-shadow:inset 0 0 2px #333 !important;
-}
-
-.app-right .friends .list-header .input-background.focused {
-box-shadow:inset 0 0 10px #333 !important;
+.app-right .friends .list-header {
+	border:none !important;
+	background:#222;
 }
 
 .app-right .friends .list .row {
-transition:0.3s;
+	transition:0.5s;
 }
 
 .app-right .friends .list .row:hover {
-background:rgba(137,190,108,0.1);
-box-shadow:inset 3px 0px 0px #89BE6C;
+	box-shadow:inset 3px 0 0 #89be6c;
+	background:rgba(137,190,108,0.2);
 }
 
 .app-right .friends .list .row.is-offline:hover {
-background:rgba(255,103,104,0.1);
-box-shadow:inset 3px 0px 0px #FF6768;
-transition:0.3s;
+	box-shadow:inset 3px 0 0 #C04043;
+	background:rgba(192,64,67,0.2);
 }
 
 .app-right .friends .list .row .room {
-transition:0.3s;
+	transition:0.5s;
 }
 
-.app-right .friends .list .row:hover .room {
-background:#89BE6C;
-padding:12px;
-top:-10px;
-color:#fff;
-text-decoration:none;
-}
-
-.app-right .friends .list .row.clickable .room:hover {
-text-decoration:none;
+.app-right .friends .list .row:hover .room,
+.app-right .friends .list .row.clickable:hover .room {
+	padding:12px;
+	background:#89BE6C;
+	top:-11px;
+	color:#fff;
+	text-decoration:none;
 }
 
 .app-right .friends .list .row.is-offline:hover .room {
-background:#FF6768;
-padding:10px;
-top:-10px;
-color:#fff;
+	background:#C04043;
 }
 
 /* RCS */
 
 #rcs-menu {
-background:rgba(44,181,232,0.2);
+	background:#1C3146;
 }
 
 #rcs-menu .header {
-background:#2CB5E8;
-}
-
-#rcs-menu .search {
-background:rgba(44,181,232,0.2) !important;
-transition:0.3s !important;
-}
-
-#rcs-menu .search.focused {
-box-shadow:inset 0 0 10px #333 !important;
+	background:#222;
 }
 
 #rcs-menu .group {
-border:none !important;
-background:#2CB5E8;
-transition:0.3s;
+	background:#2878BA;
 }
 
-#rcs-menu .group:hover {
-box-shadow:inset 0 0 10px #000;
+#rcs-menu .item {
+	transition:0.5s;
 }
 
-#rcs-menu .group i {
-top:12px !important;
+#rcs-menu .item:hover {
+	background:#324558;
 }
 
-#rcs-menu .group span {
-top:10px !important;
+.input-background, #rcs-menu .search {
+	background:rgba(44,181,232,0.2) !important;
+	transition:0.3s;
 }
 
-#rcs-menu .rsrow {
-transition:0.3s;
-}
-
-#rcs-menu .rsrow:hover {
-background:rgba(15,184,173,0.1);
+.input-background.focused, #rcs-menu .search.focused {
+	box-shadow:inset 0 0 10px #000 !important;
+	border:none;
 }
 
 /* Footer */
 
-#footer-user .buttons {
-background:#2CB5E8 !important;
-box-shadow:none;
-border:none;
-top: 0;
-height: 54px;
-box-shadow:-1px 0px 10px #333;
-z-index:25;
-}
-
-#footer-user .buttons:hover {
-box-shadow:none !important;
+#footer {
+	background:#1C3146;
 }
 
 #footer-user .buttons .button {
-box-shadow:none;
-transition:0.3s;
+	box-shadow:none !important;
+	opacity:0.6;
+	transition:0.5s;
 }
 
 #footer-user .buttons .button:hover {
-box-shadow:inset 0 0 30px #333 !important;
-background:rgba(40,120,186,0.8) !important;
+	opacity:1;
+	background:none !important;
+	box-shadow:inset 0 0 20px #000 !important;
 }
 
 #footer-user .info.showing {
-box-shadow:inset 0 0 30px #333 !important;
-background:rgba(40,120,186,0.8);
-border-radius:10px 10px 0px 0px !important;
+	box-shadow:0 0 10px #000;
+	border-radius:10px;
+	border-bottom:2px solid #2878BA;
+	background:#222;
 }
 
-#footer-user .info .bar {
-background:#333;
-border-radius:5px;
+#footer-user .info.is-staff .name span {
+	color:#fff;
 }
 
-#footer-user .info .bar .progress {
-background:#2CB5E8;
-border-radius:5px;
+#footer-user .info .meta div.bar {
+	border-radius:10px;
 }
 
-#playlist-meta {
-background:rgba(40,120,186,0.8);
-box-shadow:0px 1px 20px #333, inset 0 0 30px #333;
+#footer-user .info .meta div.bar .progress {
+	border-radius:10px;
+	background:#2878ba;
+	box-shadow:inset 0 0 10px #4aaee7;
 }
 
-#footer .bar-button .section .chevron:before, #footer .bar-button .section .chevron:after {
-background:#2CB5E8;
+#footer-user .buttons .button.settings .icon {
+	transition:0.5s;
+}
+
+#footer-user .buttons .button.settings:hover .icon {
+	transform: rotate(360deg);
 }
 
 #playlist-button {
-background:#2CB5E8 !important;
-box-shadow:1px 0px 10px #777 !important;
-right:54px !important;
-transition:0.3s !important;
+	background:#2878ba;
 }
 
-#playlist-button:hover {
-box-shadow:0px 0px 0px #777, inset 0 0 10px #333 !important;
+[data-cid^="4006230-"] .msg .from .un {
+	position: relative;
+	left: -1px;
+	padding-left: 18px;
+	background-image:url('http://i.imgur.com/qh3L2l9.png');
+	background-repeat: no-repeat;
+	background-position: -1px center;
+	background-size: 15px auto;
+	color:#7cbf00 !important;
 }
 
-#search {
-background:#2cb5e8;
-box-shadow:inset 0 1px 10px #777, inset -1px 0 10px #777;
+[data-cid^="4006230-"] .msg .from .un:before {
+content: " [DESIGNER] ";
+color:#7cbf00;
+}
+
+#user-lists .list .user.id-4006230 .name:before {
+content: "[DESIGNER] ";
+color:#7cbf00;
 }
